# accelsim-test

./: .gitignore  .gitmodules  AGENTS.md  GEMINI.md  README.md  pyproject.toml
.github/: README.md
.github/workflows/: README.md
.specify/memory/: constitution.md
context/: README.md
context/archived/: README.md
context/design/: README.md
context/hints/: README.md  about-cutlass-vs-cublas.md  about-gpu-memory-alignment.md  about-mma-and-wmma-of-b200.md  howto-get-cutlass-via-conan.md  howto-migrate-from-speckit-to-openspec.md  howto-run-accelsim-sanity-check.md  howto-time-cuda-kernels-correctly.md  howto-trigger-imma-tensor-cores-with-cublaslt.md  howto-use-cublaslt-matmul-transpose.md  howto-use-project-local-cuda-with-conan.md
context/instructions/: README.md  layout-order-n1000-focus-experiment.md
context/issues/: README.md  issue-int8-abt-view-faster-than-ab.md
context/issues/known/: README.md  issue-pixi-cuda-env-solve-conflicts.md
context/issues/resolved/: README.md  issue-pixi-cuda-env-solve-conflicts.md
context/logs/: README.md
context/plans/: README.md  plan-accelsim-dummy-cu-ptx-simulation.md  plan-gemm-transpose-full-sweep-testing.md
context/refcode/: README.md
context/roles/: README.md
context/roles/role1/: README.md
context/roles/role2/: README.md
context/rules/: README.md
context/summaries/: README.md
context/summaries/accel-sim-kb/: README.md  howto-compare-accelsim-with-real-gpu.md  qa-accel-sim-kb.md
context/tasks/: README.md  req-cuda-gemm-test.md
context/tasks/backlog/: README.md
context/tasks/done/: README.md
context/tasks/working/: README.md
context/tasks/working/003-accelsim-dummy-ptx-sim/: impl-guide-ph1-setup.md  impl-guide-ph2-foundational.md  impl-guide-ph3-us1-end-to-end.md  impl-guide-ph4-us2-ptx-provenance.md  impl-guide-ph5-us3-correctness.md  impl-guide-ph6-us4-config-preset.md  impl-guide-ph7-us5-prereqs-failfast.md  impl-guide-ph8-polish.md  (+1 more)
context/tools/: README.md
cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.py
cpp/accelsim_dummy_ptx_sim/: matmul.cu
cpp/src/: accelsim_profiling.cpp  accelsim_profiling.h  cublaslt_algo_caps_dump.cpp  cublaslt_gemm.cu  cublaslt_gemm.h  cublaslt_usable_algo_sweep.cu  gemm_transpose_bench.cu  main.cpp  main.cu  repro_algo23_int8_n1000.cu
cpp/test_package/: conanfile.py
docs/: README.md
openspec/changes/algo23-investigation/: design.md  proposal.md  tasks.md
openspec/changes/algo23-n1024-2048-usable-algos/: design.md  proposal.md  tasks.md
openspec/changes/layout-order-n1000-focus-experiment/: design.md  proposal.md  tasks.md
openspec/specs/cublaslt-kernel-discovery/: spec.md
openspec/specs/cublaslt-ncu-profiling/: spec.md
openspec/specs/cublaslt-usable-algo-sweep/: spec.md
openspec/specs/layout-order-focus-experiment/: spec.md
prdview/: .gitignore  README.md  docview.yml  refresh-docs-tree.sh  scan-files-to-stage.py
prdview/javascripts/: katex-init.js  mermaid-init.js
reports/accelsim_dummy_ptx_sim/: stakeholder_report.md
reports/transpose_matmul/cublaslt_usable_algo_sweep_20260210_131220/: merged_table.csv  meta.json  report.md  results.csv  results.json
reports/transpose_matmul/cublaslt_usable_algo_sweep_20260210_145558/: merged_table.csv  meta.json  report.md  results.csv  results.json
reports/transpose_matmul/gemm_transpose_full_sweep_20260202_083058/: all_timings.md  report.md  results.json  stakeholder_report.md
reports/transpose_matmul/gemm_transpose_full_sweep_20260205_041151/: all_timings.md  cublaslt_algo_caps.json  report.md  results.json  stakeholder_report.md
reports/transpose_matmul/gemm_transpose_full_sweep_20260209_025629/: all_timings.md  cublaslt_algo_caps.json  kernel-difference-explain.md  report.md  repro_algo23_int8_n1000.txt  results.json  stakeholder_report.md
reports/transpose_matmul/gemm_transpose_square_pinned_algo_20260202_095030/: algo_map_square.json  all_timings.md  report.md  results.json  stakeholder_report.md
reports/transpose_matmul/layout_order_focus_experiment_20260210_075753/: meta.json  report.md  results.csv  results.json
scripts/: README.md  __init__.py  cublaslt_kernel_discovery.py  cublaslt_ncu_profile.py  cublaslt_usable_algo_sweep.py  layout_order_focus_experiment.py
scripts/accelsim/: _common.sh  build.sh  short-tests.sh  smoke.sh
specs/001-gemm-transpose-bench/: spec.md
specs/001-gemm-transpose-bench/checklists/: requirements.md
specs/002-gemm-transpose-bench/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gemm-transpose-bench/checklists/: requirements.md
specs/002-gemm-transpose-bench/contracts/: cli.md  results.schema.json
specs/003-accelsim-dummy-ptx-sim/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-accelsim-dummy-ptx-sim/checklists/: requirements.md
specs/003-accelsim-dummy-ptx-sim/contracts/: cli.md
src/: README.md
src/accelsim_test/: README.md
src/accelsim_test/accelsim_dummy_ptx_sim/: __main__.py  artifacts.py  model.py  paths.py  prereqs.py  toolchain.py  workflow.py
src/accelsim_test/gemm_transpose_bench/: __init__.py  __main__.py  algo_map.py  config.py  export.py  profiling.py  report.py  runner.py  sweep.py
src/accelsim_test/profiling/: __init__.py  cublaslt_profiling.py
tests/: README.md
tests/integration/: README.md  test_gemm_transpose_nonsquare_smoke.py  test_gemm_transpose_square_smoke.py
tests/manual/: README.md  run_accelsim_dummy_ptx_sim_smoke.py  run_gemm_transpose_profile_smoke.py
tests/unit/: README.md  test_accelsim_dummy_ptx_sim_artifacts.py  test_accelsim_dummy_ptx_sim_paths.py  test_accelsim_dummy_ptx_sim_prereqs.py  test_accelsim_dummy_ptx_sim_presets.py  test_accelsim_dummy_ptx_sim_status.py  test_cublaslt_profiling_cli_validation.py  test_cublaslt_profiling_layout.py  test_cublaslt_usable_algo_sweep_cases.py  test_gemm_transpose_ratios.py  test_gemm_transpose_report.py  test_gemm_transpose_report_run.py  test_gemm_transpose_schema.py  test_gemm_transpose_verification.py  test_layout_order_focus_experiment_cases.py
(+107 files in other folders)
